# 99-problems-in-ocaml

./: README.md
src/M99_problems_in_ocaml/: M99_problems_in_ocaml.opam  dune-project
src/M99_problems_in_ocaml/lib/: dune  problem1.ml  problem10.ml  problem11.ml  problem12.ml  problem13.ml  problem14.ml  problem15.ml  problem16.ml  problem17.ml  problem18.ml  problem19.ml  problem2.ml  problem20.ml  problem21.ml  problem22.ml  problem3.ml  problem4.ml  problem5.ml  problem6.ml  problem7.ml  problem8.ml  problem9.ml
src/M99_problems_in_ocaml/test/: M99_problems_in_ocaml.ml  dune
