(lang dune 3.11)

(name M99_problems_in_ocaml)

(generate_opam_files true)

(source
 (github tsandrini/99-problems-in-ocaml))

(authors "Tomáš Sandrini")

(maintainers "tsandrini")

(license MIT)

(documentation https://github.com/tsandrini/99-problems-in-ocaml)

(package
 (name M99_problems_in_ocaml)
 (synopsis "My solutions to https://v2.ocaml.org/learn/tutorials/99problems.html")
 (description "My solutions to https://v2.ocaml.org/learn/tutorials/99problems.html")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
